# IDMyBee-Auto-Cropper

./: .gitignore  Cargo.toml  README.md  card.pptm
ressources/: card.pptm
ressources/card/: card.pptm
src/: app_shortcuts.rs  config.ini  explorer.rs  file_explorer.rs  idmybee_cli.rs  idmybee_gui.rs  main.rs  marker_utils.rs
