[package]
name = "idmybee"
version = "1.1.0"
edition = "2021"
authors = ["Vincent Le Du"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
# apriltag = "0.4.0"
argparse = "0.2.2"
cv-convert = {version = "0.23.0", default-features = false, features = ["opencv_0-83", "image_0-24"]}
eframe = "0.22.0"
egui = "0.22.0"
egui_extras = "0.22.0"
env_logger = "0.10.0"
image = "0.24.7"
nalgebra = "0.32.3"
num = "0.4.1"
num-derive = "0.4.0"
num-traits = "0.2.16"
opencv = "0.83.0"

[[bin]]
name = "idmybee_cli"
path = "src/idmybee_cli.rs"

[[bin]]
name = "idmybee_gui"
path = "src/idmybee_gui.rs"
